--- a/pattern-library/4_blocks/index.html
+++ b/pattern-library/4_blocks/index.html
@@ -68,6 +68,25 @@
                         </div>
                     </div>
                 </div>
+
+
+                <div class="pl-pattern-description">
+                    <h2>
+                        Nav Bar, with dashboard-icon
+                    </h2>
+                    <div class="pl-divider"></div>
+                </div>
+
+                <div class="container">
+                    <div class="pl-sub-pattern">
+                        <h4 class="pl-h4">&nbsp;</h4>
+                        <div class="pl-sub-pattern-markup">
+                            @@include('../partials/_nav-bar.html', {
+                             "context": "dash"
+                            })
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section class="pl-pattern" id="pl-pattern-mode-context">
